ntl_lib/ntl_parser.output
   0  $accept : %entry% $end

   1  ntldescr : NTSDECL IDENT SEMICOLON comma_sep_header_list
   2           | NTSDECL IDENT SEMICOLON decl_sequence

   3  comma_sep_header_list : gvars_decl SEMICOLON decl_sequence
   4                        | gvars_decl SEMICOLON comma_sep_header_list
   5                        | gvars_initial_conditions SEMICOLON comma_sep_header_list
   6                        | gvars_initial_conditions SEMICOLON decl_sequence
   7                        | thread_declaration SEMICOLON decl_sequence
   8                        | thread_declaration SEMICOLON comma_sep_header_list

   9  gvars_initial_conditions : INIT nts_trans_split_prec

  10  ident_list : IDENT
  11             | IDENT COMMA ident_list

  12  gvars_decl : ident_list COLON INTDECL
  13             | ident_list COLON REALDECL SEMICOLON
  14             | ident_list COLON NATDECL SEMICOLON
  15             | ident_list COLON BOOLDECL SEMICOLON

  16  thread_declaration : INSTANCES thread_decl_list

  17  thread_decl_list : thread_decl COMMA thread_decl_list
  18                   | thread_decl

  19  thread_decl : IDENT OBRACK INT CBRACK

  20  decl_sequence : decl_automata decl_sequence
  21                | EOF

  22  decl_automata : IDENT LBRACK vars_automaton states_list transitions_list RBRACK

  23  vars_automaton : vars_loc vars_automaton
  24                 | vars_loc

  25  vars_loc : INPUTVARLIST typed_id_list_list SEMICOLON
  26           | OUTPUTVARLIST typed_id_list_list SEMICOLON
  27           | typed_id_list_list SEMICOLON

  28  typed_id_list_list : typed_id_list COMMA typed_id_list_list
  29                     | typed_id_list

  30  typed_id_list : ident_list COLON INTDECL
  31                | ident_list COLON NATDECL
  32                | ident_list COLON REALDECL
  33                | ident_list COLON BOOLDECL

  34  transitions_list : transitions transitions_list
  35                   | transitions

  36  transitions : IDENT ARROW IDENT LBRACK RBRACK
  37              | IDENT ARROW IDENT LBRACK nts_trans_split RBRACK
  38              | IDENT COLON IDENT ARROW IDENT LBRACK nts_trans_split RBRACK
  39              | IDENT COLON IDENT ARROW IDENT LBRACK RBRACK

  40  states_list : cautomaton_state states_list
  41              | cautomaton_state

  42  cautomaton_state : INITSTATE ident_list SEMICOLON
  43                   | FINALSTATE ident_list SEMICOLON
  44                   | ERRORSTATE ident_list SEMICOLON

  45  nts_trans_elem : BNOT pressburg_atomic_bool
  46                 | BOR
  47                 | BNOT LBRACE pressburg_atomic_bool RBRACE
  48                 | BNOT LBRACE pressburg_tree_guards RBRACE
  49                 | LBRACE pressburg_atomic_bool RBRACE
  50                 | LBRACE pressburg_tree_guards RBRACE
  51                 | pressburg_atomic_bool
  52                 | gen_affect
  53                 | havocise
  54                 | qformula
  55                 | LBRACE qformula RBRACE

  56  qformula : EXISTS ident_list COLON INTDECL DOT pressburg_atomic_bool
  57           | EXISTS ident_list COLON INTDECL DOT LBRACE pressburg_tree_guards RBRACE
  58           | EXISTS ident_list COLON INTDECL DOT LBRACE qformula RBRACE
  59           | FORALL ident_list COLON INTDECL DOT pressburg_atomic_bool
  60           | FORALL ident_list COLON INTDECL DOT LBRACE pressburg_tree_guards RBRACE
  61           | FORALL ident_list COLON INTDECL DOT LBRACE qformula RBRACE

  62  nts_trans_split_prec : nts_trans_elem BOR nts_trans_split_prec
  63                       | nts_trans_elem BAND nts_trans_split_prec
  64                       | nts_trans_elem

  65  nts_trans_split : nts_trans_split_prec

  66  primed_var_list : primed_express COMMA primed_var_list
  67                  | primed_express COMMA primed_express

  68  gen_affect : PRIMEDVAR EQ IDENT LBRACE arithm_expr_list RBRACE
  69             | PRIMEDVAR EQ IDENT LBRACE RBRACE
  70             | PRIMEDVAR EQ arithm_expr
  71             | LBRACE PRIMEDVAR RBRACE EQ IDENT LBRACE arithm_expr_list RBRACE
  72             | LBRACE PRIMEDVAR RBRACE EQ IDENT LBRACE RBRACE
  73             | LBRACE primed_var_list RBRACE EQ IDENT LBRACE arithm_expr_list RBRACE
  74             | LBRACE primed_var_list RBRACE EQ IDENT LBRACE RBRACE
  75             | IDENT LBRACE arithm_expr_list RBRACE
  76             | IDENT LBRACE RBRACE

  77  pressburg_tree_guards : LBRACE pressburg_atomic_bool RBRACE
  78                        | LBRACE pressburg_tree_guards RBRACE
  79                        | LBRACE qformula RBRACE
  80                        | pressburg_atomic_bool BAND pressburg_atomic_bool
  81                        | pressburg_tree_guards BAND pressburg_tree_guards
  82                        | pressburg_tree_guards BAND pressburg_atomic_bool
  83                        | pressburg_atomic_bool BAND pressburg_tree_guards
  84                        | qformula BAND pressburg_tree_guards
  85                        | qformula BAND pressburg_atomic_bool
  86                        | pressburg_tree_guards BAND qformula
  87                        | pressburg_atomic_bool BAND qformula
  88                        | pressburg_atomic_bool BOR pressburg_atomic_bool
  89                        | pressburg_tree_guards BOR pressburg_atomic_bool
  90                        | pressburg_atomic_bool BOR pressburg_tree_guards
  91                        | pressburg_tree_guards BOR pressburg_tree_guards
  92                        | qformula BOR pressburg_tree_guards
  93                        | qformula BOR pressburg_atomic_bool
  94                        | pressburg_tree_guards BOR qformula
  95                        | pressburg_atomic_bool BOR qformula
  96                        | BNOT pressburg_tree_guards
  97                        | BNOT pressburg_atomic_bool

  98  pressburg_atomic_bool : BTRUE
  99                        | BFALSE
 100                        | arithm_expr GT arithm_expr
 101                        | arithm_expr LT arithm_expr
 102                        | arithm_expr GEQ arithm_expr
 103                        | arithm_expr LEQ arithm_expr
 104                        | arithm_expr EQ arithm_expr
 105                        | arithm_expr NEQ arithm_expr

 106  primed_express : PRIMEDVAR

 107  arithm_expr_list : arithm_expr
 108                   | arithm_expr COMMA arithm_expr_list

 109  arithm_expr : INT
 110              | IDENT
 111              | primed_express
 112              | LBRACE arithm_expr RBRACE
 113              | MINUS arithm_expr
 114              | arithm_expr PLUS arithm_expr
 115              | arithm_expr MINUS arithm_expr
 116              | arithm_expr DIV arithm_expr
 117              | arithm_expr MOD arithm_expr
 118              | arithm_expr TIMES arithm_expr

 119  havocise : HAVOC LBRACE ident_list RBRACE
 120           | HAVOC LBRACE RBRACE

 121  %entry% : '\001' ntldescr

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . ntldescr  (121)

	NTSDECL  shift 3
	.  error

	ntldescr  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ntldescr : NTSDECL . IDENT SEMICOLON comma_sep_header_list  (1)
	ntldescr : NTSDECL . IDENT SEMICOLON decl_sequence  (2)

	IDENT  shift 5
	.  error


state 4
	%entry% : '\001' ntldescr .  (121)

	.  reduce 121


state 5
	ntldescr : NTSDECL IDENT . SEMICOLON comma_sep_header_list  (1)
	ntldescr : NTSDECL IDENT . SEMICOLON decl_sequence  (2)

	SEMICOLON  shift 6
	.  error


state 6
	ntldescr : NTSDECL IDENT SEMICOLON . comma_sep_header_list  (1)
	ntldescr : NTSDECL IDENT SEMICOLON . decl_sequence  (2)

	IDENT  shift 7
	EOF  shift 8
	INSTANCES  shift 9
	INIT  shift 10
	.  error

	comma_sep_header_list  goto 11
	decl_sequence  goto 12
	gvars_decl  goto 13
	gvars_initial_conditions  goto 14
	thread_declaration  goto 15
	ident_list  goto 16
	decl_automata  goto 17


state 7
	ident_list : IDENT .  (10)
	ident_list : IDENT . COMMA ident_list  (11)
	decl_automata : IDENT . LBRACK vars_automaton states_list transitions_list RBRACK  (22)

	LBRACK  shift 18
	COMMA  shift 19
	COLON  reduce 10


state 8
	decl_sequence : EOF .  (21)

	.  reduce 21


state 9
	thread_declaration : INSTANCES . thread_decl_list  (16)

	IDENT  shift 20
	.  error

	thread_decl_list  goto 21
	thread_decl  goto 22


state 10
	gvars_initial_conditions : INIT . nts_trans_split_prec  (9)

	INT  shift 23
	IDENT  shift 24
	PRIMEDVAR  shift 25
	MINUS  shift 26
	LBRACE  shift 27
	BTRUE  shift 28
	BFALSE  shift 29
	BOR  shift 30
	BNOT  shift 31
	HAVOC  shift 32
	EXISTS  shift 33
	FORALL  shift 34
	.  error

	arithm_expr  goto 35
	nts_trans_split_prec  goto 36
	nts_trans_elem  goto 37
	pressburg_atomic_bool  goto 38
	gen_affect  goto 39
	havocise  goto 40
	qformula  goto 41
	primed_express  goto 42


state 11
	ntldescr : NTSDECL IDENT SEMICOLON comma_sep_header_list .  (1)

	.  reduce 1


state 12
	ntldescr : NTSDECL IDENT SEMICOLON decl_sequence .  (2)

	.  reduce 2


state 13
	comma_sep_header_list : gvars_decl . SEMICOLON decl_sequence  (3)
	comma_sep_header_list : gvars_decl . SEMICOLON comma_sep_header_list  (4)

	SEMICOLON  shift 43
	.  error


state 14
	comma_sep_header_list : gvars_initial_conditions . SEMICOLON comma_sep_header_list  (5)
	comma_sep_header_list : gvars_initial_conditions . SEMICOLON decl_sequence  (6)

	SEMICOLON  shift 44
	.  error


state 15
	comma_sep_header_list : thread_declaration . SEMICOLON decl_sequence  (7)
	comma_sep_header_list : thread_declaration . SEMICOLON comma_sep_header_list  (8)

	SEMICOLON  shift 45
	.  error


state 16
	gvars_decl : ident_list . COLON INTDECL  (12)
	gvars_decl : ident_list . COLON REALDECL SEMICOLON  (13)
	gvars_decl : ident_list . COLON NATDECL SEMICOLON  (14)
	gvars_decl : ident_list . COLON BOOLDECL SEMICOLON  (15)

	COLON  shift 46
	.  error


state 17
	decl_sequence : decl_automata . decl_sequence  (20)

	IDENT  shift 47
	EOF  shift 8
	.  error

	decl_sequence  goto 48
	decl_automata  goto 17


state 18
	decl_automata : IDENT LBRACK . vars_automaton states_list transitions_list RBRACK  (22)

	IDENT  shift 49
	INPUTVARLIST  shift 50
	OUTPUTVARLIST  shift 51
	.  error

	ident_list  goto 52
	vars_automaton  goto 53
	vars_loc  goto 54
	typed_id_list_list  goto 55
	typed_id_list  goto 56


state 19
	ident_list : IDENT COMMA . ident_list  (11)

	IDENT  shift 49
	.  error

	ident_list  goto 57


state 20
	thread_decl : IDENT . OBRACK INT CBRACK  (19)

	OBRACK  shift 58
	.  error


state 21
	thread_declaration : INSTANCES thread_decl_list .  (16)

	.  reduce 16


state 22
	thread_decl_list : thread_decl . COMMA thread_decl_list  (17)
	thread_decl_list : thread_decl .  (18)

	COMMA  shift 59
	SEMICOLON  reduce 18


state 23
	arithm_expr : INT .  (109)

	.  reduce 109


state 24
	gen_affect : IDENT . LBRACE arithm_expr_list RBRACE  (75)
	gen_affect : IDENT . LBRACE RBRACE  (76)
	arithm_expr : IDENT .  (110)

	LBRACE  shift 60
	TIMES  reduce 110
	PLUS  reduce 110
	MINUS  reduce 110
	DIV  reduce 110
	MOD  reduce 110
	LT  reduce 110
	GT  reduce 110
	EQ  reduce 110
	NEQ  reduce 110
	LEQ  reduce 110
	GEQ  reduce 110


state 25
	gen_affect : PRIMEDVAR . EQ IDENT LBRACE arithm_expr_list RBRACE  (68)
	gen_affect : PRIMEDVAR . EQ IDENT LBRACE RBRACE  (69)
	gen_affect : PRIMEDVAR . EQ arithm_expr  (70)
	primed_express : PRIMEDVAR .  (106)

	EQ  shift 61
	TIMES  reduce 106
	PLUS  reduce 106
	MINUS  reduce 106
	DIV  reduce 106
	MOD  reduce 106
	LT  reduce 106
	GT  reduce 106
	NEQ  reduce 106
	LEQ  reduce 106
	GEQ  reduce 106


state 26
	arithm_expr : MINUS . arithm_expr  (113)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 64
	.  error

	arithm_expr  goto 65
	primed_express  goto 42


state 27
	nts_trans_elem : LBRACE . pressburg_atomic_bool RBRACE  (49)
	nts_trans_elem : LBRACE . pressburg_tree_guards RBRACE  (50)
	nts_trans_elem : LBRACE . qformula RBRACE  (55)
	gen_affect : LBRACE . PRIMEDVAR RBRACE EQ IDENT LBRACE arithm_expr_list RBRACE  (71)
	gen_affect : LBRACE . PRIMEDVAR RBRACE EQ IDENT LBRACE RBRACE  (72)
	gen_affect : LBRACE . primed_var_list RBRACE EQ IDENT LBRACE arithm_expr_list RBRACE  (73)
	gen_affect : LBRACE . primed_var_list RBRACE EQ IDENT LBRACE RBRACE  (74)
	arithm_expr : LBRACE . arithm_expr RBRACE  (112)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 66
	MINUS  shift 26
	LBRACE  shift 67
	BTRUE  shift 28
	BFALSE  shift 29
	BNOT  shift 68
	EXISTS  shift 33
	FORALL  shift 34
	.  error

	arithm_expr  goto 69
	pressburg_atomic_bool  goto 70
	pressburg_tree_guards  goto 71
	qformula  goto 72
	primed_var_list  goto 73
	primed_express  goto 74


state 28
	pressburg_atomic_bool : BTRUE .  (98)

	.  reduce 98


state 29
	pressburg_atomic_bool : BFALSE .  (99)

	.  reduce 99


state 30
	nts_trans_elem : BOR .  (46)

	.  reduce 46


state 31
	nts_trans_elem : BNOT . pressburg_atomic_bool  (45)
	nts_trans_elem : BNOT . LBRACE pressburg_atomic_bool RBRACE  (47)
	nts_trans_elem : BNOT . LBRACE pressburg_tree_guards RBRACE  (48)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 75
	BTRUE  shift 28
	BFALSE  shift 29
	.  error

	arithm_expr  goto 35
	pressburg_atomic_bool  goto 76
	primed_express  goto 42


state 32
	havocise : HAVOC . LBRACE ident_list RBRACE  (119)
	havocise : HAVOC . LBRACE RBRACE  (120)

	LBRACE  shift 77
	.  error


state 33
	qformula : EXISTS . ident_list COLON INTDECL DOT pressburg_atomic_bool  (56)
	qformula : EXISTS . ident_list COLON INTDECL DOT LBRACE pressburg_tree_guards RBRACE  (57)
	qformula : EXISTS . ident_list COLON INTDECL DOT LBRACE qformula RBRACE  (58)

	IDENT  shift 49
	.  error

	ident_list  goto 78


state 34
	qformula : FORALL . ident_list COLON INTDECL DOT pressburg_atomic_bool  (59)
	qformula : FORALL . ident_list COLON INTDECL DOT LBRACE pressburg_tree_guards RBRACE  (60)
	qformula : FORALL . ident_list COLON INTDECL DOT LBRACE qformula RBRACE  (61)

	IDENT  shift 49
	.  error

	ident_list  goto 79


state 35
	pressburg_atomic_bool : arithm_expr . GT arithm_expr  (100)
	pressburg_atomic_bool : arithm_expr . LT arithm_expr  (101)
	pressburg_atomic_bool : arithm_expr . GEQ arithm_expr  (102)
	pressburg_atomic_bool : arithm_expr . LEQ arithm_expr  (103)
	pressburg_atomic_bool : arithm_expr . EQ arithm_expr  (104)
	pressburg_atomic_bool : arithm_expr . NEQ arithm_expr  (105)
	arithm_expr : arithm_expr . PLUS arithm_expr  (114)
	arithm_expr : arithm_expr . MINUS arithm_expr  (115)
	arithm_expr : arithm_expr . DIV arithm_expr  (116)
	arithm_expr : arithm_expr . MOD arithm_expr  (117)
	arithm_expr : arithm_expr . TIMES arithm_expr  (118)

	TIMES  shift 80
	PLUS  shift 81
	MINUS  shift 82
	DIV  shift 83
	MOD  shift 84
	LT  shift 85
	GT  shift 86
	EQ  shift 87
	NEQ  shift 88
	LEQ  shift 89
	GEQ  shift 90
	.  error


state 36
	gvars_initial_conditions : INIT nts_trans_split_prec .  (9)

	.  reduce 9


state 37
	nts_trans_split_prec : nts_trans_elem . BOR nts_trans_split_prec  (62)
	nts_trans_split_prec : nts_trans_elem . BAND nts_trans_split_prec  (63)
	nts_trans_split_prec : nts_trans_elem .  (64)

	BAND  shift 91
	BOR  shift 92
	RBRACK  reduce 64
	SEMICOLON  reduce 64


state 38
	nts_trans_elem : pressburg_atomic_bool .  (51)

	.  reduce 51


state 39
	nts_trans_elem : gen_affect .  (52)

	.  reduce 52


state 40
	nts_trans_elem : havocise .  (53)

	.  reduce 53


state 41
	nts_trans_elem : qformula .  (54)

	.  reduce 54


state 42
	arithm_expr : primed_express .  (111)

	.  reduce 111


state 43
	comma_sep_header_list : gvars_decl SEMICOLON . decl_sequence  (3)
	comma_sep_header_list : gvars_decl SEMICOLON . comma_sep_header_list  (4)

	IDENT  shift 7
	EOF  shift 8
	INSTANCES  shift 9
	INIT  shift 10
	.  error

	comma_sep_header_list  goto 93
	decl_sequence  goto 94
	gvars_decl  goto 13
	gvars_initial_conditions  goto 14
	thread_declaration  goto 15
	ident_list  goto 16
	decl_automata  goto 17


state 44
	comma_sep_header_list : gvars_initial_conditions SEMICOLON . comma_sep_header_list  (5)
	comma_sep_header_list : gvars_initial_conditions SEMICOLON . decl_sequence  (6)

	IDENT  shift 7
	EOF  shift 8
	INSTANCES  shift 9
	INIT  shift 10
	.  error

	comma_sep_header_list  goto 95
	decl_sequence  goto 96
	gvars_decl  goto 13
	gvars_initial_conditions  goto 14
	thread_declaration  goto 15
	ident_list  goto 16
	decl_automata  goto 17


state 45
	comma_sep_header_list : thread_declaration SEMICOLON . decl_sequence  (7)
	comma_sep_header_list : thread_declaration SEMICOLON . comma_sep_header_list  (8)

	IDENT  shift 7
	EOF  shift 8
	INSTANCES  shift 9
	INIT  shift 10
	.  error

	comma_sep_header_list  goto 97
	decl_sequence  goto 98
	gvars_decl  goto 13
	gvars_initial_conditions  goto 14
	thread_declaration  goto 15
	ident_list  goto 16
	decl_automata  goto 17


state 46
	gvars_decl : ident_list COLON . INTDECL  (12)
	gvars_decl : ident_list COLON . REALDECL SEMICOLON  (13)
	gvars_decl : ident_list COLON . NATDECL SEMICOLON  (14)
	gvars_decl : ident_list COLON . BOOLDECL SEMICOLON  (15)

	INTDECL  shift 99
	NATDECL  shift 100
	REALDECL  shift 101
	BOOLDECL  shift 102
	.  error


state 47
	decl_automata : IDENT . LBRACK vars_automaton states_list transitions_list RBRACK  (22)

	LBRACK  shift 18
	.  error


state 48
	decl_sequence : decl_automata decl_sequence .  (20)

	.  reduce 20


state 49
	ident_list : IDENT .  (10)
	ident_list : IDENT . COMMA ident_list  (11)

	COMMA  shift 19
	RBRACE  reduce 10
	COLON  reduce 10
	SEMICOLON  reduce 10


state 50
	vars_loc : INPUTVARLIST . typed_id_list_list SEMICOLON  (25)

	IDENT  shift 49
	.  error

	ident_list  goto 52
	typed_id_list_list  goto 103
	typed_id_list  goto 56


state 51
	vars_loc : OUTPUTVARLIST . typed_id_list_list SEMICOLON  (26)

	IDENT  shift 49
	.  error

	ident_list  goto 52
	typed_id_list_list  goto 104
	typed_id_list  goto 56


state 52
	typed_id_list : ident_list . COLON INTDECL  (30)
	typed_id_list : ident_list . COLON NATDECL  (31)
	typed_id_list : ident_list . COLON REALDECL  (32)
	typed_id_list : ident_list . COLON BOOLDECL  (33)

	COLON  shift 105
	.  error


state 53
	decl_automata : IDENT LBRACK vars_automaton . states_list transitions_list RBRACK  (22)

	INITSTATE  shift 106
	FINALSTATE  shift 107
	ERRORSTATE  shift 108
	.  error

	states_list  goto 109
	cautomaton_state  goto 110


state 54
	vars_automaton : vars_loc . vars_automaton  (23)
	vars_automaton : vars_loc .  (24)

	IDENT  shift 49
	INPUTVARLIST  shift 50
	OUTPUTVARLIST  shift 51
	INITSTATE  reduce 24
	FINALSTATE  reduce 24
	ERRORSTATE  reduce 24

	ident_list  goto 52
	vars_automaton  goto 111
	vars_loc  goto 54
	typed_id_list_list  goto 55
	typed_id_list  goto 56


state 55
	vars_loc : typed_id_list_list . SEMICOLON  (27)

	SEMICOLON  shift 112
	.  error


state 56
	typed_id_list_list : typed_id_list . COMMA typed_id_list_list  (28)
	typed_id_list_list : typed_id_list .  (29)

	COMMA  shift 113
	SEMICOLON  reduce 29


state 57
	ident_list : IDENT COMMA ident_list .  (11)

	.  reduce 11


state 58
	thread_decl : IDENT OBRACK . INT CBRACK  (19)

	INT  shift 114
	.  error


state 59
	thread_decl_list : thread_decl COMMA . thread_decl_list  (17)

	IDENT  shift 20
	.  error

	thread_decl_list  goto 115
	thread_decl  goto 22


state 60
	gen_affect : IDENT LBRACE . arithm_expr_list RBRACE  (75)
	gen_affect : IDENT LBRACE . RBRACE  (76)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 64
	RBRACE  shift 116
	.  error

	arithm_expr  goto 117
	primed_express  goto 42
	arithm_expr_list  goto 118


state 61
	gen_affect : PRIMEDVAR EQ . IDENT LBRACE arithm_expr_list RBRACE  (68)
	gen_affect : PRIMEDVAR EQ . IDENT LBRACE RBRACE  (69)
	gen_affect : PRIMEDVAR EQ . arithm_expr  (70)

	INT  shift 23
	IDENT  shift 119
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 64
	.  error

	arithm_expr  goto 120
	primed_express  goto 42


state 62
	arithm_expr : IDENT .  (110)

	.  reduce 110


state 63
	primed_express : PRIMEDVAR .  (106)

	.  reduce 106


state 64
	arithm_expr : LBRACE . arithm_expr RBRACE  (112)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 64
	.  error

	arithm_expr  goto 121
	primed_express  goto 42


state 65
	arithm_expr : MINUS arithm_expr .  (113)
	arithm_expr : arithm_expr . PLUS arithm_expr  (114)
	arithm_expr : arithm_expr . MINUS arithm_expr  (115)
	arithm_expr : arithm_expr . DIV arithm_expr  (116)
	arithm_expr : arithm_expr . MOD arithm_expr  (117)
	arithm_expr : arithm_expr . TIMES arithm_expr  (118)

	TIMES  shift 80
	PLUS  shift 81
	MINUS  shift 82
	DIV  shift 83
	MOD  shift 84
	LT  reduce 113
	GT  reduce 113
	EQ  reduce 113
	NEQ  reduce 113
	LEQ  reduce 113
	GEQ  reduce 113
	RBRACE  reduce 113
	RBRACK  reduce 113
	SEMICOLON  reduce 113
	COMMA  reduce 113
	BAND  reduce 113
	BOR  reduce 113


66: shift/reduce conflict (shift 122, reduce 106) on RBRACE
state 66
	gen_affect : LBRACE PRIMEDVAR . RBRACE EQ IDENT LBRACE arithm_expr_list RBRACE  (71)
	gen_affect : LBRACE PRIMEDVAR . RBRACE EQ IDENT LBRACE RBRACE  (72)
	primed_express : PRIMEDVAR .  (106)

	RBRACE  shift 122
	TIMES  reduce 106
	PLUS  reduce 106
	MINUS  reduce 106
	DIV  reduce 106
	MOD  reduce 106
	LT  reduce 106
	GT  reduce 106
	EQ  reduce 106
	NEQ  reduce 106
	LEQ  reduce 106
	GEQ  reduce 106
	COMMA  reduce 106


state 67
	pressburg_tree_guards : LBRACE . pressburg_atomic_bool RBRACE  (77)
	pressburg_tree_guards : LBRACE . pressburg_tree_guards RBRACE  (78)
	pressburg_tree_guards : LBRACE . qformula RBRACE  (79)
	arithm_expr : LBRACE . arithm_expr RBRACE  (112)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 67
	BTRUE  shift 28
	BFALSE  shift 29
	BNOT  shift 68
	EXISTS  shift 33
	FORALL  shift 34
	.  error

	arithm_expr  goto 69
	pressburg_atomic_bool  goto 123
	pressburg_tree_guards  goto 124
	qformula  goto 125
	primed_express  goto 42


state 68
	pressburg_tree_guards : BNOT . pressburg_tree_guards  (96)
	pressburg_tree_guards : BNOT . pressburg_atomic_bool  (97)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 67
	BTRUE  shift 28
	BFALSE  shift 29
	BNOT  shift 68
	EXISTS  shift 33
	FORALL  shift 34
	.  error

	arithm_expr  goto 35
	pressburg_atomic_bool  goto 126
	pressburg_tree_guards  goto 127
	qformula  goto 128
	primed_express  goto 42


state 69
	pressburg_atomic_bool : arithm_expr . GT arithm_expr  (100)
	pressburg_atomic_bool : arithm_expr . LT arithm_expr  (101)
	pressburg_atomic_bool : arithm_expr . GEQ arithm_expr  (102)
	pressburg_atomic_bool : arithm_expr . LEQ arithm_expr  (103)
	pressburg_atomic_bool : arithm_expr . EQ arithm_expr  (104)
	pressburg_atomic_bool : arithm_expr . NEQ arithm_expr  (105)
	arithm_expr : LBRACE arithm_expr . RBRACE  (112)
	arithm_expr : arithm_expr . PLUS arithm_expr  (114)
	arithm_expr : arithm_expr . MINUS arithm_expr  (115)
	arithm_expr : arithm_expr . DIV arithm_expr  (116)
	arithm_expr : arithm_expr . MOD arithm_expr  (117)
	arithm_expr : arithm_expr . TIMES arithm_expr  (118)

	TIMES  shift 80
	PLUS  shift 81
	MINUS  shift 82
	DIV  shift 83
	MOD  shift 84
	LT  shift 85
	GT  shift 86
	EQ  shift 87
	NEQ  shift 88
	LEQ  shift 89
	GEQ  shift 90
	RBRACE  shift 129
	.  error


state 70
	nts_trans_elem : LBRACE pressburg_atomic_bool . RBRACE  (49)
	pressburg_tree_guards : pressburg_atomic_bool . BAND pressburg_atomic_bool  (80)
	pressburg_tree_guards : pressburg_atomic_bool . BAND pressburg_tree_guards  (83)
	pressburg_tree_guards : pressburg_atomic_bool . BAND qformula  (87)
	pressburg_tree_guards : pressburg_atomic_bool . BOR pressburg_atomic_bool  (88)
	pressburg_tree_guards : pressburg_atomic_bool . BOR pressburg_tree_guards  (90)
	pressburg_tree_guards : pressburg_atomic_bool . BOR qformula  (95)

	RBRACE  shift 130
	BAND  shift 131
	BOR  shift 132
	.  error


state 71
	nts_trans_elem : LBRACE pressburg_tree_guards . RBRACE  (50)
	pressburg_tree_guards : pressburg_tree_guards . BAND pressburg_tree_guards  (81)
	pressburg_tree_guards : pressburg_tree_guards . BAND pressburg_atomic_bool  (82)
	pressburg_tree_guards : pressburg_tree_guards . BAND qformula  (86)
	pressburg_tree_guards : pressburg_tree_guards . BOR pressburg_atomic_bool  (89)
	pressburg_tree_guards : pressburg_tree_guards . BOR pressburg_tree_guards  (91)
	pressburg_tree_guards : pressburg_tree_guards . BOR qformula  (94)

	RBRACE  shift 133
	BAND  shift 134
	BOR  shift 135
	.  error


state 72
	nts_trans_elem : LBRACE qformula . RBRACE  (55)
	pressburg_tree_guards : qformula . BAND pressburg_tree_guards  (84)
	pressburg_tree_guards : qformula . BAND pressburg_atomic_bool  (85)
	pressburg_tree_guards : qformula . BOR pressburg_tree_guards  (92)
	pressburg_tree_guards : qformula . BOR pressburg_atomic_bool  (93)

	RBRACE  shift 136
	BAND  shift 137
	BOR  shift 138
	.  error


state 73
	gen_affect : LBRACE primed_var_list . RBRACE EQ IDENT LBRACE arithm_expr_list RBRACE  (73)
	gen_affect : LBRACE primed_var_list . RBRACE EQ IDENT LBRACE RBRACE  (74)

	RBRACE  shift 139
	.  error


state 74
	primed_var_list : primed_express . COMMA primed_var_list  (66)
	primed_var_list : primed_express . COMMA primed_express  (67)
	arithm_expr : primed_express .  (111)

	COMMA  shift 140
	TIMES  reduce 111
	PLUS  reduce 111
	MINUS  reduce 111
	DIV  reduce 111
	MOD  reduce 111
	LT  reduce 111
	GT  reduce 111
	EQ  reduce 111
	NEQ  reduce 111
	LEQ  reduce 111
	GEQ  reduce 111
	RBRACE  reduce 111


state 75
	nts_trans_elem : BNOT LBRACE . pressburg_atomic_bool RBRACE  (47)
	nts_trans_elem : BNOT LBRACE . pressburg_tree_guards RBRACE  (48)
	arithm_expr : LBRACE . arithm_expr RBRACE  (112)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 67
	BTRUE  shift 28
	BFALSE  shift 29
	BNOT  shift 68
	EXISTS  shift 33
	FORALL  shift 34
	.  error

	arithm_expr  goto 69
	pressburg_atomic_bool  goto 141
	pressburg_tree_guards  goto 142
	qformula  goto 128
	primed_express  goto 42


state 76
	nts_trans_elem : BNOT pressburg_atomic_bool .  (45)

	.  reduce 45


state 77
	havocise : HAVOC LBRACE . ident_list RBRACE  (119)
	havocise : HAVOC LBRACE . RBRACE  (120)

	IDENT  shift 49
	RBRACE  shift 143
	.  error

	ident_list  goto 144


state 78
	qformula : EXISTS ident_list . COLON INTDECL DOT pressburg_atomic_bool  (56)
	qformula : EXISTS ident_list . COLON INTDECL DOT LBRACE pressburg_tree_guards RBRACE  (57)
	qformula : EXISTS ident_list . COLON INTDECL DOT LBRACE qformula RBRACE  (58)

	COLON  shift 145
	.  error


state 79
	qformula : FORALL ident_list . COLON INTDECL DOT pressburg_atomic_bool  (59)
	qformula : FORALL ident_list . COLON INTDECL DOT LBRACE pressburg_tree_guards RBRACE  (60)
	qformula : FORALL ident_list . COLON INTDECL DOT LBRACE qformula RBRACE  (61)

	COLON  shift 146
	.  error


state 80
	arithm_expr : arithm_expr TIMES . arithm_expr  (118)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 64
	.  error

	arithm_expr  goto 147
	primed_express  goto 42


state 81
	arithm_expr : arithm_expr PLUS . arithm_expr  (114)

	INT  shift 23
	IDENT  shift 62
	PRIMEDVAR  shift 63
	MINUS  shift 26
	LBRACE  shift 64
	.  error
